package test_13_05_2024.observer.CA6;

public interface IListenerObserver {
    public void listen(PlayerData data);
}
