@startuml
'https://plantuml.com/class-diagram

interface IListenerObserver {
    + void listen(PlayerData data);
}

class PlayerData {
    # int thoi_gian, luot_choi, diem;
}

class Dashboard {

}

IListenerObserver <|.. Dashboard
PlayerData --> IListenerObserver:observers
PlayerData <-- Dashboard



@enduml